Add nev changes

--- a/src/app/cabinet/components/legal-individual-person/legal-individual-person.component.html
+++ b/src/app/cabinet/components/legal-individual-person/legal-individual-person.component.html
@@ -2,168 +2,17 @@
   <div class="d-flex justify-content-between">
     <div><h1 class="pt-3">Fiziki/Hüquqi şəxslər</h1></div>
     <div class="d-flex align-items-center">
-      <p-button label="Əlavə et" icon="fa-solid fa-plus" routerLink="/new-individual-person" />
+      <p-button
+        label="Əlavə et"
+        icon="fa-solid fa-plus"
+        routerLink="/new-individual-person"
+      />
     </div>
   </div>
 
   <!--Data table-->
-  <div class="overflow-y-auto px-0 mt-3">
-    <mat-table [dataSource]="dataSource" class="material-table">
-      <!-- Person Column -->
-      <ng-container matColumnDef="person">
-        <mat-header-cell *matHeaderCellDef>
-          <div>
-            <p>Hüquqi(fiziki) şəxsin adı</p>
-            <input type="text" pInputText />
-          </div>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.person }} </mat-cell>
-      </ng-container>
-
-      <!-- Phone Column -->
-      <ng-container matColumnDef="phone">
-        <mat-header-cell *matHeaderCellDef>
-          <div>
-            <p>Telefon</p>
-            <input type="text" pInputText />
-          </div>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.phone }}</mat-cell>
-      </ng-container>
-
-      <!-- Voen  Column -->
-      <ng-container matColumnDef="voen">
-        <mat-header-cell *matHeaderCellDef>
-          <div>
-            <p>Vöen</p>
-            <input type="text" pInputText />
-          </div>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.voen }}</mat-cell>
-      </ng-container>
-
-      <!-- Leader Column -->
-      <ng-container matColumnDef="leader">
-        <mat-header-cell *matHeaderCellDef>
-          <div>
-            <p>Rəhbərin S.A.A</p>
-            <input type="text" pInputText />
-          </div>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element">{{ element.leader }} </mat-cell>
-      </ng-container>
-
-      <!-- Activity type Column -->
-      <ng-container matColumnDef="activityType">
-        <mat-header-cell *matHeaderCellDef>
-          <div>
-            <p>Fəaliyyətin adı</p>
-            <input type="text" pInputText />
-          </div>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element"
-          >{{ element.activityType }}
-        </mat-cell>
-      </ng-container>
-
-      <!-- Legal address Column -->
-      <ng-container matColumnDef="legalAddress">
-        <mat-header-cell *matHeaderCellDef>
-          <div>
-            <p>Hüquqi ünvan</p>
-            <input type="text" pInputText />
-          </div>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element"
-          >{{ element.legalAddress }}
-        </mat-cell>
-      </ng-container>
-
-      <!-- Object Column -->
-      <ng-container matColumnDef="object">
-        <mat-header-cell *matHeaderCellDef>
-          <div>
-            <p>Müəssisə üzrə ə.a.m.</p>
-            <input type="text" pInputText />
-          </div>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element">{{ element.object }} </mat-cell>
-      </ng-container>
-
-      <!-- Subordination a Column -->
-      <ng-container matColumnDef="subordination">
-        <mat-header-cell *matHeaderCellDef>
-          <div>
-            <p>Tabeçiliyi</p>
-            <input type="text" pInputText />
-          </div>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element">
-          {{ element.subordination }}</mat-cell
-        >
-      </ng-container>
-
-      <!-- Note Column -->
-      <ng-container matColumnDef="note">
-        <mat-header-cell *matHeaderCellDef>
-          <div>
-            <p>Qeyd</p>
-            <input type="text" pInputText />
-          </div>
-        </mat-header-cell>
-        <mat-cell *matCellDef="let element">{{ element.note }} </mat-cell>
-      </ng-container>
-
-      <!-- Edit Column -->
-      <ng-container matColumnDef="edit">
-        <mat-header-cell
-          *matHeaderCellDef
-          style="flex: unset !important; width: 45px !important"
-        >
-          <div class="d-flex align-items-center pt-4" style="font-size: 18px">
-            <i class="fa-solid fa-filter"></i>
-          </div>
-        </mat-header-cell>
-        <mat-cell
-          *matCellDef="let element"
-          style="flex: unset !important; width: 45px !important"
-          class="d-flex align-items-center"
-        >
-          <i class="fa-solid fa-pen edit-icon custom-col-icon"></i>
-        </mat-cell>
-      </ng-container>
-
-      <!-- Delete Column -->
-      <ng-container matColumnDef="delete">
-        <mat-header-cell
-          *matHeaderCellDef
-          style="flex: unset !important; width: 45px !important"
-          class="d-flex align-items-center"
-        >
-          <div class="d-flex align-items-center pt-4" style="font-size: 18px">
-            <i class="fa-solid fa-rotate-right"></i>
-          </div>
-        </mat-header-cell>
-        <mat-cell
-          *matCellDef="let element"
-          style="flex: unset !important; width: 45px !important"
-        >
-          <i class="fa-solid fa-trash delete-icon custom-col-icon"></i>
-        </mat-cell>
-      </ng-container>
-
-      <mat-header-row
-        *matHeaderRowDef="displayedColumns; sticky: true"
-      ></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-    </mat-table>
-
-    <mat-paginator
-      class="py-4 px-0 mx-0"
-      [length]="200"
-      [pageSizeOptions]="[10, 50, 100]"
-      aria-label="Select page"
-    >
-    </mat-paginator>
-  </div>
+  <table-togglable-columns
+    [dataSource]="ELEMENT_DATA"
+    [displayedColumns]="displayedColumns"
+  ></table-togglable-columns>
 </div>
