--- a/src/app/cabinet/components/new-individual-person/new-individual-person.component.html
+++ b/src/app/cabinet/components/new-individual-person/new-individual-person.component.html
@@ -33,17 +33,6 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="pe-5">
-              <!--FIN-->
-              <div class="pb-2">
-                <label for="FIN" class="pb-1">FIN*</label>
-                <div class="p-inputgroup">
-                  <input type="text" pInputText formControlName="fin" />
-                  <span class="p-inputgroup-addon">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                  </span>
-                </div>
-              </div>
-
               <!--Name-->
               <div class="pb-2">
                 <label for="name" class="pb-1">Ad*</label>
@@ -68,6 +57,12 @@
                 </div>
               </div>
 
+              <!--FIN-->
+              <div class="pb-2">
+                <label for="FIN" class="pb-1">FIN*</label>
+                <input type="text" pInputText />
+              </div>
+
               <!--Voen-->
               <div class="pb-2">
                 <label for="name" class="pb-1">Vöen*</label>
@@ -75,6 +70,7 @@
                   <input type="text" pInputText />
                 </div>
               </div>
+
               <!-- Number Type and Numbers -->
               <div formArrayName="inputs">
                 <div
@@ -115,6 +111,7 @@
                   </div>
                 </div>
               </div>
+
               <!-- Add Button -->
               <div class="d-flex justify-content-end">
                 <button
@@ -201,45 +198,310 @@
           </div>
         </div>
 
-        <div class="row">
-          <p>Ünvanlar</p>
-          <div class="address_info p-0 mx-2">
-            <div class="col-lg-6">
-              <div class="ps-3 pt-2">
-                <!-- Address type-->
-                <div class="pb-2">
-                  <label for="name" class="pb-1">Ünvanın tipi</label>
-                  <div class="flex justify-content-center">
-                    <p-dropdown [options]="addType" optionLabel="name">
-                    </p-dropdown>
+        <div class="row px-0 mx-0">
+          <!-- Address Blocks -->
+          <div class="p-0 m-0">
+            <p>Ünvanlar</p>
+            <div formArrayName="addresses">
+              <div
+                *ngFor="let address of addresses.controls; let i = index"
+                [formGroupName]="i"
+                class="w-100 address_info my-3 row py-3"
+              >
+                <!-- Address Type -->
+                <div class="col-lg-6">
+                  <div class="pb-2">
+                    <label for="name" class="pb-1">Ünvanın tipi</label>
+                    <div class="flex justify-content-center">
+                      <p-dropdown
+                        [options]="addType"
+                        optionLabel="name"
+                        formControlName="addressType"
+                      ></p-dropdown>
+                    </div>
                   </div>
-                </div>
-                <!-- City -->
-                <div class="pb-2">
-                  <label for="name" class="pb-1">Şəhər</label>
-                  <div class="flex justify-content-center">
-                    <p-dropdown [options]="cities" optionLabel="name">
-                    </p-dropdown>
+
+                  <!-- City -->
+                  <div class="pb-2">
+                    <label for="name" class="pb-1">Şəhər</label>
+                    <div class="flex justify-content-center">
+                      <p-dropdown
+                        [options]="cities"
+                        optionLabel="name"
+                        formControlName="city"
+                      ></p-dropdown>
+                    </div>
+                  </div>
+
+                  <!-- Other Address Fields -->
+                  <div class="pb-2">
+                    <label for="name" class="pb-1">Küçə</label>
+                    <input type="text" pInputText formControlName="street" />
+                  </div>
+                  <div class="pb-2">
+                    <label for="name" class="pb-1">Kənd/qəsəbə</label>
+                    <div class="flex justify-content-center">
+                      <p-dropdown
+                        [options]="addType"
+                        optionLabel="name"
+                        formControlName="village"
+                      ></p-dropdown>
+                    </div>
                   </div>
                 </div>
 
-                <!--Kuce-->
-                <div class="pb-2">
-                  <label for="name" class="pb-1">Küçə</label>
-                  <div>
-                    <input type="text" pInputText />
+                <div class="col-lg-6">
+                  <div class="pb-2">
+                    <label for="name" class="pb-1">Ev(bina)</label>
+                    <input type="text" pInputText formControlName="building" />
                   </div>
+                  <div class="pb-2">
+                    <label for="name" class="pb-1">Poçt indeksi</label>
+                    <input
+                      type="text"
+                      pInputText
+                      formControlName="postalCode"
+                    />
+                  </div>
+                  <div class="pb-2">
+                    <label for="name" class="pb-1">Mənzil</label>
+                    <input type="text" pInputText formControlName="apartment" />
+                  </div>
+                </div>
+
+                <!-- Remove Address Block Button -->
+                <div class="d-flex justify-content-end">
+                  <button
+                    pButton
+                    type="button"
+                    icon="pi pi-minus"
+                    class="rmv-btn my-2"
+                    (click)="removeAddressBlock(i)"
+                    *ngIf="addresses.length > 1"
+                  >
+                    - Sil
+                  </button>
                 </div>
               </div>
             </div>
-            <div class="col-lg-6"></div>
+
+            <!-- Add Address Block Button -->
+            <div class="d-flex justify-content-end">
+              <button
+                pButton
+                class="add-btn my-2"
+                type="button"
+                icon="pi pi-plus"
+                (click)="addAddressBlock()"
+              >
+                + Yeni ünvan
+              </button>
+            </div>
           </div>
+        </div>
+        <!-- Send Button -->
+        <div class="send d-flex justify-content-end w-100 p-0 m-0">
+          <button pButton class="add-btn my-3" type="button">Göndər</button>
         </div>
       </form>
     </div>
     <!--Legal  Forms-->
     <div *ngIf="selectedPerson === 'legal-person'" class="pt-4">
-      <form [formGroup]="legalPersonForm"></form>
+      <form [formGroup]="legalPersonForm">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="pe-5">
+              <!--Name-->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Hüquqi şəxsin adı*</label>
+                <div>
+                  <input type="text" pInputText />
+                </div>
+              </div>
+
+              <!-- Teskilati-forma -->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Təşkilati hüquqi forması</label>
+                <div class="flex justify-content-center">
+                  <p-dropdown
+                    [options]="cities"
+                    optionLabel="name"
+                    formControlName="city"
+                  ></p-dropdown>
+                </div>
+              </div>
+
+              <!--Voen-->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Vöen*</label>
+                <div>
+                  <input type="text" pInputText />
+                </div>
+              </div>
+
+              <!--Rehber ad-->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Rəhbərin adı*</label>
+                <div>
+                  <input type="text" pInputText />
+                </div>
+              </div>
+
+              <!--Rehber soyad-->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Rəhbərin soyadı*</label>
+                <div>
+                  <input type="text" pInputText />
+                </div>
+              </div>
+
+              <!--Rehber ata ad-->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Rəhbərin ata adı*</label>
+                <div>
+                  <input type="text" pInputText />
+                </div>
+              </div>
+
+              <!-- Activity type -->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Fəaliyət növü</label>
+                <div class="flex justify-content-center">
+                  <p-dropdown [options]="acType" optionLabel="name">
+                  </p-dropdown>
+                </div>
+              </div>
+
+              <!-- Activity type 2 -->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Fəaliyət tipi</label>
+                <div class="flex justify-content-center">
+                  <p-dropdown [options]="acType2" optionLabel="name">
+                  </p-dropdown>
+                </div>
+              </div>
+
+              <!--Active-->
+              <div class="pb-2 d-flex">
+                <p-checkbox value="active" inputId="ny" />
+                <div class="ps-2"><label for="name">Aktiv</label></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="pe-5">
+              <!-- Mulkiyyet novu -->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Mülkiyyət növü</label>
+                <div class="flex justify-content-center">
+                  <p-dropdown [options]="acType2" optionLabel="name">
+                  </p-dropdown>
+                </div>
+              </div>
+
+              <!--Fealiyyete baslama tarixi-->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Fəaliyyətə başlama tarixi</label>
+                <div class="w-100">
+                  <p-calendar
+                    class="w-100 m-0"
+                    [iconDisplay]="'input'"
+                    [showIcon]="true"
+                    inputId="icondisplay"
+                  />
+                </div>
+              </div>
+
+              <!-- Inception -->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Əsas aparıcı müfəttişlik</label>
+                <div class="flex justify-content-center">
+                  <p-dropdown [options]="inception" optionLabel="name">
+                  </p-dropdown>
+                </div>
+              </div>
+
+              <!--Email-->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Elektron-poçt</label>
+                <div>
+                  <input type="text" pInputText />
+                </div>
+              </div>
+
+              <!--Note -->
+              <div class="pb-2">
+                <label for="name" class="pb-1">Qeyd</label>
+                <div class="flex justify-content-center">
+                  <textarea
+                    class="w-100"
+                    rows="3"
+                    cols="30"
+                    pInputTextarea
+                  ></textarea>
+                </div>
+              </div>
+
+              <!-- Number Type and Numbers -->
+              <div formArrayName="inputsLeg">
+                <div
+                  *ngFor="let input of inputsLeg.controls; let i = index"
+                  [formGroupName]="i"
+                  class="pb-2"
+                >
+                  <!-- Number Type -->
+                  <div class="pb-2">
+                    <label for="name" class="pb-1">Nömrə növləri*</label>
+                    <div class="flex justify-content-center">
+                      <p-dropdown
+                        [options]="numberType"
+                        optionLabel="name"
+                        formControlName="selectedType"
+                      >
+                      </p-dropdown>
+                    </div>
+                  </div>
+
+
+                  <!-- Numbers -->
+                  <div class="pb-2">
+                    <label for="">Nömrələr</label>
+                    <div class="p-field">
+                      <input type="text" pInputText formControlName="value" />
+                      <div class="d-flex justify-content-end">
+                        <button
+                          pButton
+                          type="button"
+                          icon="pi pi-minus"
+                          class="rmv-btn my-2"
+                          (click)="removeInputLeg(i)"
+                          *ngIf="inputsLeg.length > 1"
+                        >
+                          - Sil
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+
+              <!-- Add Button -->
+              <div class="d-flex justify-content-end">
+                <button
+                  pButton
+                  class="add-btn my-2"
+                  type="button"
+                  icon="pi pi-plus"
+                  (click)="addInputLeg()"
+                >
+                  + Yeni nömrə
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </div>
