--- a/src/app/dialogs/table-menu-dialog/table-menu-dialog.component.html
+++ b/src/app/dialogs/table-menu-dialog/table-menu-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="form-wrapper">
   <form [formGroup]="formGroup">
-    @for (item of allColumns; track $index) {
-    <p-checkbox
+    @for (item of allColumns; track $index) { @if(item.key!='actions'){
+      <p-checkbox
       [binary]="true"
       inputId="binary"
       [formControlName]="item.key"
@@ -9,10 +9,9 @@
       class="pb-3"
     />
     }
+    } 
   </form>
 </div>
-
-
 
 
 
