--- a/src/app/cabinet/cabinet.component.html
+++ b/src/app/cabinet/cabinet.component.html
@@ -1,13 +1,15 @@
 <div class="main-content d-flex flex-column">
-    <div class="content d-flex">
-      <app-sidebar></app-sidebar>
-      <div class="content-wrapper d-flex flex-column" [ngClass]="!minimizeSidebar ? 'left-side1' : 'left-side2'">
-        <app-header></app-header>
-        <div class="chg-content">
-          <router-outlet></router-outlet>
-        </div>
-        <app-footer></app-footer>
+  <div class="content d-flex">
+    <app-sidebar></app-sidebar>
+    <div
+      class="content-wrapper d-flex flex-column"
+      [ngClass]="!minimizeSidebar ? 'left-side1' : 'left-side2'"
+    >
+      <app-header></app-header>
+      <div class="chg-content">
+        <router-outlet></router-outlet>
       </div>
+      <app-footer></app-footer>
     </div>
   </div>
-  
+</div>
