--- a/src/app/cabinet/components/danger-objects/danger-objects.component.html
+++ b/src/app/cabinet/components/danger-objects/danger-objects.component.html
@@ -1,3 +1,15 @@
-<div class="danger-objects px-3 py-3" >
-    <h1>Təhlükə potensiallı obyekt</h1>
+<div class="danger-objects px-3 py-3">
+  <h1>Təhlükə potensiallı obyekt</h1>
+  <!--Data table-->
+  <table-togglable-columns
+    [dataSource]="ELEMENT_DATA"
+    [displayedColumns]="displayedColumns"
+    [paginator]="true"
+    [editButton]="true"
+    editButtonText="düzəliş et"
+    [deleteButton]="true"
+    deleteButtonText="sil"
+    (onEdit)="logData($event)"
+    (onDelete)="logData($event)"
+  ></table-togglable-columns>
 </div>
