--- a/src/app/shared/table-togglable-columns/table-togglable-columns.component.scss
+++ b/src/app/shared/table-togglable-columns/table-togglable-columns.component.scss
@@ -1,48 +1,66 @@
 @import "../../../styles/variables.scss";
 
-mat-header-cell {
+::ng-deep table-togglable-columns {
+  position: relative;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  gap: 10px;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  border-bottom: none !important;
-  background-color: $table-header !important;
-  font-size: 13px !important;
-  text-align: center !important;
-  font-weight: 700 !important;
-  color: white !important;
-  line-height: 20px !important;
-  &:first-child {
-    border-top-left-radius: 10px !important;
-  }
-  &:last-child {
-    border-top-right-radius: 10px;
-  }
-  .filter-form-wrapper {
-    width: 100%;
-    display: flex;
-    gap: 20px;
 
-    mat-form-field {
-      width: 100%;
-      border-color: white!important;
-      input {
-        font-size: 16px;
-      }
-    }
-
-    ::ng-deep & .mat-mdc-text-field-wrapper {
-      display: flex;
-      height: 40px;
-      align-items: center;
-      color: white!important;
-    }
+  & .mat-mdc-form-field-subscript-wrapper {
+    display: none;
   }
 }
-mat-header-cell:last-child {
+
+.sidebar-panel-cust {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #fdfbff;
+}
+
+.table-wrapper {
+  width: 100%;
+
+  mat-table {
+    min-width: unset;
+    overflow-y: auto;
+    width: 100%;
+
+    .actions-buttons-wrapper {
+      width: 100%;
+      display: flex;
+      gap: 10px;
+      justify-content: end;
+      align-items: center;
+    }
+
+    mat-header-cell {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+      padding-top: 15px;
+      padding-bottom: 10px;
+      border-bottom: none !important;
+      background-color: $table-header !important;
+      font-size: 13px !important;
+      text-align: center !important;
+      font-weight: 700 !important;
+      color: white !important;
+      line-height: 20px !important;
+      cursor: pointer;
+      mat-form-field {
+        width: 100%;
+        background-color: white;
+        border-color: white;
+        border-radius: 8px;
+        --mdc-filled-text-field-caret-color: white !important;
+        --mdc-filled-text-field-focus-active-indicator-color: white !important;
+        --mdc-outlined-text-field-caret-color: white;
+        --mdc-outlined-text-field-focus-outline-color: white !important;
+        --mdc-outlined-text-field-outline-color: white !important;
+      }
+    }
+  }
 }
